PS-1253 Updated client to support new query.