@@ -2,14 +2,13 @@ package org.plos.ned_client.auth;
 
 import org.plos.ned_client.Pair;
 
-import com.migcomponents.migbase64.Base64;
-
 import java.util.Map;
 import java.util.List;
 
 import java.io.UnsupportedEncodingException;
+import javax.xml.bind.DatatypeConverter;
 
-@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaClientCodegen", date = "2015-12-21T13:36:13.082-08:00")
+@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaClientCodegen", date = "2015-12-29T17:05:32.045-08:00")
 public class HttpBasicAuth implements Authentication {
   private String username;
   private String password;
@@ -32,12 +31,9 @@ public class HttpBasicAuth implements Authentication {
 
   @Override
   public void applyToParams(List<Pair> queryParams, Map<String, String> headerParams) {
-    if (username == null && password == null) {
-      return;
-    }
     String str = (username == null ? "" : username) + ":" + (password == null ? "" : password);
     try {
-      headerParams.put("Authorization", "Basic " + Base64.encodeToString(str.getBytes("UTF-8"), false));
+      headerParams.put("Authorization", "Basic " + DatatypeConverter.printBase64Binary(str.getBytes("UTF-8")));
     } catch (UnsupportedEncodingException e) {
       throw new RuntimeException(e);
     }
